--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBS1Ay_LSabB9IOx6oqBJ7SBAb9WaD5PFk&libraries=places"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
