--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
   <div>
-    <h4>Login with your phone now !!</h4>
+    <h4>Confirm</h4>
   </div>
-  <button ion-button (click)="confirmPhone()">COnfirm your phone number</button>
+  <button ion-button (click)="confirmPhone()">Confirm phone number</button>
 </ion-content>
