Removed setRoot and used Push for navCtrl

--- a/src/pages/phone/phone.html
+++ b/src/pages/phone/phone.html
@@ -14,8 +14,6 @@
 
 
 <ion-content padding>
-  <div>
-    <h4>Confirm</h4>
-  </div>
-  <button ion-button (click)="confirmPhone()">Confirm phone number</button>
+
+  <button ion-button block (click)="confirmPhone()">Confirm phone number</button>
 </ion-content>
