--- a/src/pages/bookings/bookings.html
+++ b/src/pages/bookings/bookings.html
@@ -7,12 +7,35 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>bookings</ion-title>
+    <ion-title>My Bookings</ion-title>
   </ion-navbar>
+  <ion-toolbar no-border-top>
+    <ion-segment [(ngModel)]="Bookings">
 
+      <ion-segment-button value="inactive">
+        Live
+      </ion-segment-button>
+      <ion-segment-button value="live">
+        Inactive
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-card>
+    <img src="http://placehold.it/400x400"/>
+    <ion-card-content>
+      <ion-card-title>
+        Plumbing Co.
+        </ion-card-title>
+      <p>
+        Date Ordered: 31st July
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-fab right bottom>
+    <button (click)="goToBookingForm()" ion-fab mini><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
